--- a/src/options.html
+++ b/src/options.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="styles/vex-theme-default-4.1.0.css"/>
     <style>
       nav { width: 14em; margin-right: 0.5em; }
+      nav i {  margin-right: 0.4em; font-size: 1.6em !important; }
       nav a { display: block; padding: 0.2em 0.5em; border-radius: 0 50px 50px 0; transition: all 0.5s ease-in-out; }
       nav a:hover { background-color: #ffebcd; }
       select { max-width: 25em; }
@@ -27,6 +28,7 @@
       .address { max-width: 10em; }
       #accounts button.small { margin-left: 0.2em; }
       .default :not([data-i18n="edit"]) { visibility: hidden; }
+      #accounts button i.fa { font-size: 1.8em; }
     </style>
 
   </head>
@@ -48,14 +50,14 @@
       <div style="display: flex;">
 
         <nav>
-          <a data-i18n="add"><i class="fa fa-1point8x fa-plus-circle fp-fontawsome-border-for-text"></i></a>
-          <a data-i18n="deleteAll"><i class="fa fa-1point8x fa-trash fp-fontawsome-border-for-text"></i></a>
-          <a data-i18n="export"><i class="fa fa-1point8x fa-download fp-fontawsome-border-for-text"></i></a>
-          <a data-i18n="import"><i class="fa fa-1point8x fa-upload fp-fontawsome-border-for-text"></i></a>
-          <a data-i18n="log"><i class="fa fa-1point8x fa-file-text fp-fontawsome-border-for-text"></i></a>
-          <a href="https://getfoxyproxy.org/geoip/" target="_blank" data-i18n="myIP"><i class="fa fa-1point8x fa-globe fp-fontawsome-border-for-text"></i></a>
-          <a data-i18n="deleteBrowserData"><i class="fa fa-1point8x fa-eraser fp-fontawsome-border-for-text"></i></a>
-          <a data-i18n="about"><i class="fa fa-1point8x fa-question fp-fontawsome-border-for-text"></i></a>
+          <a data-i18n="add"><i class="fa fa-plus-circle"></i></a>
+          <a data-i18n="import"><i class="fa fa-download"></i></a>
+          <a data-i18n="export"><i class="fa fa-upload"></i></a>
+          <a data-i18n="deleteAll"><i class="fa fa-trash"></i></a>
+          <a data-i18n="deleteBrowserData"><i class="fa fa-eraser" style="margin-right: 0.1em;"></i></a>
+          <a href="https://getfoxyproxy.org/geoip/" target="_blank" data-i18n="myIP"><i class="fa fa-globe"></i></a>
+          <a data-i18n="log"><i class="fa fa-file-text"></i></a>
+          <a data-i18n="about"><i class="fa fa-question"></i></a>
         </nav>
 
         <div class="rightColumn">
@@ -70,8 +72,8 @@
             <div style="text-align: right;">
                 <span data-i18n="syncSettings"></span>
                 <button type="button" class="plain has-tip" data-i18n="help|title">?</button>
-                <input id="syncOnOff" type="checkbox" name="syncOnOff" class="switch-input" checked>
-                <label class="switch-paddle" for="syncOnOff" style="vertical-align: middle;">
+                <input id="syncOnOff" type="checkbox" name="syncOnOff" class="switch-input">
+                <label class="switch-paddle" for="syncOnOff">
                   <span class="show-for-sr" data-i18n="onOff"></span>
                   <span class="switch-active bold" aria-hidden="true" style="color: white" data-i18n="on"></span>
                   <span class="switch-inactive bold fp-orange" aria-hidden="true" data-i18n="off"></span>
@@ -91,16 +93,16 @@
             </div>
             <div style="text-align: right;">
               <input type="checkbox" name="onOff" class="switch-input" id="">
-              <label style="vertical-align: text-bottom" class="switch-paddle" for="">
+              <label class="switch-paddle" for="">
                 <span class="switch-active" aria-hidden="true" style="color: white" data-i18n="on"></span>
                 <span class="switch-inactive bold fp-orange" aria-hidden="true" data-i18n="off"></span>
               </label>
 
               <button type="button" class="small" data-i18n="edit"></button>
               <button type="button" class="small" data-i18n="patterns"></button>
-              <button type="button" class="plain" data-i18n="delete|title"><i class="fa fa-1point8x fa-trash fp-orange"></i></button>
-              <button type="button" class="plain up" data-i18n="up|title"><i class="fa fa-1point8x fa-caret-up fp-orange"></i></button>
-              <button type="button" class="plain down" data-i18n="down|title"><i class="fa fa-1point8x fa-sort-desc fp-orange"></i></button>
+              <button type="button" class="plain" data-i18n="delete|title"><i class="fa fa-trash fp-orange"></i></button>
+              <button type="button" class="plain up" data-i18n="up|title"><i class="fa fa-caret-up fp-orange"></i></button>
+              <button type="button" class="plain down" data-i18n="down|title"><i class="fa fa-sort-desc fp-orange"></i></button>
             </div>
           </div>
 
@@ -114,7 +116,6 @@
     </div>
 
   <script src="scripts/const.js"></script>
-  <script src="scripts/storage.js"></script>
   <script src="scripts/utils.js"></script>
   <script src="scripts/vex.combined-4.1.0.js"></script>
   <script src="scripts/options.js"></script>
