--- a/src/pattern-help.html
+++ b/src/pattern-help.html
@@ -4,16 +4,17 @@
     <meta charset="UTF-8">
     <title>FoxyProxy Pattern Help</title>
     <link rel="icon" type="image/png" href="/images/icon.svg">
-    <link rel="stylesheet" href="styles/fontawesome-4.6.3.css">
     <link rel="stylesheet" href="styles/app.css">
     <style>
       td { font-size: 0.9em; }
+      td:not(:first-of-type) { font-family: monospace; }
+      .prime { border: 1px solid #ccc; }
     </style>
   </head>
   <body>
 
     <!-- header -->
-    <div class="prime header">Pattern Help<</div>
+    <div class="prime header">Pattern Help</div>
     
     <!-- main -->
     <div class="prime">    
