--- a/src/proxy.html
+++ b/src/proxy.html
@@ -13,7 +13,7 @@
 
       .onOff > label { flex: 4;  margin-right: 1em; }
       .onOff > div { flex: 1 !important; }
-      .unsupported { margin-top: 1.5em; }
+      .unsupported { margin-top: 1.5em; border: 1px solid #ccc; }
 
       .onOff, .pac, .unsupported { display: none; }
       input[name="nav"] { display: none; }
@@ -182,7 +182,6 @@
   </div>
 
   <script src="scripts/const.js"></script>
-  <script src="scripts/storage.js"></script>
   <script src="scripts/utils.js"></script>
   <script src="scripts/jscolor-2.0.5.js"></script><!-- only used here -->
   <script src="scripts/proxy.js"></script>
