--- a/src/about.html
+++ b/src/about.html
@@ -6,6 +6,16 @@
     <link rel="icon" type="image/png" href="/images/icon.svg">
     <link rel="stylesheet" href="styles/fontawesome-4.6.3.css">
     <link rel="stylesheet" href="styles/app.css">
+    <style>
+      i.fa {
+        color: #f7941e;
+        display: inline-block;
+        font-size: 1.3em;
+        margin-right: 0.2em;
+        text-align: center;
+        width: 1em;
+      }
+    </style>
   </head>
   <body>
 
@@ -29,21 +39,32 @@
 
       <h3>Help</h3>
       <p>
-        <a target="_blank" href="https://support.getfoxyproxy.org/"><i class="fa fa-question fp-orange"></i> Open a Support Ticket (no registration required)</a><br>
-        <a href="mailto:support@getfoxyproxy.org"><i class="fa fa-envelope-o fp-orange"></i> Email Support</a><br>
-        <a target="_blank" href="https://forums.getfoxyproxy.org/"><i class="fa fa-users fp-orange"></i> Community Support Forums</a><br>
-        <a href="/pattern-help.html"><i class="fa fa-flask fp-orange"></i> Pattern Help</a> <i>(no internet connection required)</i><br>
-        <a id="whereamiButton" target="_blank" href="https://getfoxyproxy.org/geoip/"><i class="fa fa-globe fp-orange"></i> What's my IP Address?</a>
+        <i class="fa fa-question"></i> <a href="https://support.getfoxyproxy.org/" target="_blank">Open a Support Ticket </a><i>(no registration required)</i><br>
+        <i class="fa fa-envelope-o"></i> <a href="mailto:support@getfoxyproxy.org">Email Support</a><br>
+        <i class="fa fa-users"></i> <a href="https://forums.getfoxyproxy.org/" target="_blank">Community Support Forums</a><br>
+        <i class="fa fa-flask"></i> <a href="/pattern-tester.html">Pattern Test</a> &amp; <a href="/pattern-help.html">Pattern Help</a> <i>(no internet connection required)</i><br>
+        <i class="fa fa-globe"></i> <a href="https://getfoxyproxy.org/geoip/" target="_blank">What's my IP Address?</a>
       </p>
 
       <h3>Support Me</h3>
-      <p>Please <ahref="https://www.paypal.me/ericjung2/9.99" target="_blank" >donate</a> or <a href="https://getfoxyproxy.org/order/" target="_blank">buy dedicated VPN/Proxy Servers</a> in over 100 countries (including such remote places like <a href="https://wikipedia.org/wiki/Réunion" target="_blank">Reunion Island</a>).</p>
+      <p>Please <a href="https://www.paypal.me/ericjung2/9.99" target="_blank">donate</a> or <a href="https://getfoxyproxy.org/order/" target="_blank">buy dedicated VPN/Proxy Servers</a> in over 100 countries (including such remote places like <a href="https://wikipedia.org/wiki/Réunion" target="_blank">Reunion Island</a>).</p>
       <p><strong>Thank you for using FoxyProxy!</strong></p>
-      <img src="/images/ericjung.png" a;t="">
+      <img src="/images/ericjung.png" alt="">
       <p>-- <a href="mailto:eric.jung@getfoxyproxy.org">Eric H. Jung</a><br>Colorado, USA</p>
 
 
       <h3>Release Notes for Recent Releases</h3>
+
+      <h4>Versions 7.0</h4>
+        <ul>
+          <li>Option to transfer preferences from <i>local</i> to <i>Sync</i> and vice versa</li>
+          <li>Date is added to the export filename</li>
+          <li>Export auto-renames file if the same name exists</li>
+          <li>Import data max size set to 5mb</li>
+          <li>Greatly streamlined</li>
+          <li>Style/Code Improvement</li>
+        </ul>      
+
       
       <h4>Versions 6.4, 6.5, 6.6, 6.6.1, 6.6.2 (some versions unreleased)</h4>
       <ul>
