--- a/src/log.html
+++ b/src/log.html
@@ -9,15 +9,16 @@
     <style>
       tbody tr:nth-child(even) { background-color: #f5fffa  !important; }
       tbody tr:hover { background-color: #cae1d3 !important; }
+      tbody tr:hover a { color: #a0522d; }
       tbody td { overflow-x: auto; text-overflow: ellipsis; white-space: nowrap; scrollbar-color: #ddd #f5f5f5; scrollbar-width: thin; }
       td:nth-child(1) { max-width: 20em; }      
       td:nth-child(2) { max-width: 5em; }
-      td:nth-child(3) { width: 1em; border: 2px solid #fff; }
+      td:nth-child(3) { width: 2em; border-radius: 5px; border: 2px solid #fff; }
       td:nth-child(4) { max-width: 8em; }
       td:nth-child(5) { max-width: 8em; }
       td:nth-child(6) { max-width: 14em; }
-      .button { margin-bottom: 0; }
-      .scroll {  max-height: 40vh; overflow-y: auto; scrollbar-color: #ddd #f5f5f5; scrollbar-width: thin; }
+      .scroll { max-height: 60vh; }
+      .prime { border: 1px solid #ccc; }
     </style>
   </head>
   <body>
@@ -43,14 +44,15 @@
       </label>
 
 
-      <div class="prime"><strong>Failed URLs display here, too!</strong> A row in this log does not mean the URL successfully loaded. The log shows only how <strong>attempts</strong> were made to load URLs. If the proxy server was not responding or there was some other problem which prevented the URL from loading, the URL still displays here. This is a limitation of Firefox 57+.
+      <div class="prime warning"><strong>Failed URLs display here, too!</strong><br>
+        A row in this log does not mean the URL successfully loaded. The log shows only how <strong>attempts</strong> were made to load URLs. If the proxy server was not responding or there was some other problem which prevented the URL from loading, the URL still displays here. This is a limitation of Firefox 57+.
       </div>
 
       <div class="scroll">
         <table style="width: 100%;">
           <thead>
             <tr>
-              <th data-i18n="url"></th><th data-i18n="proxyTitle"></th><th data-i18n="proxyColor"></th>
+              <th data-i18n="url"></th><th data-i18n="proxyTitle"></th><th data-i18n="color"></th>
               <th data-i18n="proxyAddress"></th><th data-i18n="matchPattern"></th><th data-i18n="timestamp"></th>
              </tr>
             <!-- template -->
@@ -71,16 +73,15 @@
       </div>
 
       <div style="margin-top: 1em; text-align: right;">
-        <button type="button" class="button" data-i18n="back">&#x25c1; </button>
-        <button type="button" class="button" data-i18n="refresh"></button>
-        <button type="button" class="button alert" data-i18n="clear"></button>
+        <button type="button" data-i18n="back">&#x25c1; </button>
+        <button type="button" data-i18n="refresh"></button>
+        <button type="button" class="alert" data-i18n="clear"></button>
       </div>
 
     </div>
 
   <script src="scripts/const.js"></script>
   <script src="scripts/utils.js"></script>
-  <script src="scripts/storage.js"></script>
   <script src="scripts/log.js"></script>
   </body>
 </html>
