--- a/src/pattern-tester.html
+++ b/src/pattern-tester.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <title data-i18n="patternTester">FoxyProxy </title>
     <link rel="icon" type="image/png" href="/images/icon.svg">
-    <link rel="stylesheet" href="styles/fontawesome-4.6.3.css">
     <link rel="stylesheet" href="styles/app.css">
     <style>
       h3 { margin-bottom: 0; }
+      .prime { border: 1px solid #ccc; }
       .prime > h3:first-of-type { margin-top: 0; }
       p { margin-top: 0; }
       #result { margin: 1em 0 0; }
@@ -65,7 +65,6 @@
 
   <script src="scripts/const.js"></script>
   <script src="scripts/utils.js"></script>
-  <script src="scripts/validate-pattern.js"></script>
   <script src="scripts/pattern-tester.js"></script>
   </body>
 </html>
