--- a/src/popup.html
+++ b/src/popup.html
@@ -7,19 +7,16 @@
     <style>
       body { font-size: 1.1em; padding: 0.4em; }
       h4 { margin: 0 0 0.5em; border-bottom: 1px solid #ccc; }
-      ul { margin: 0; padding: 0;  max-height: 25em; overflow-y: auto; 
-        scrollbar-color: #ddd #f5f5f5; scrollbar-width: thin; }
+      ul.scroll { margin: 0; padding: 0;  max-height: 25em; }
       li { cursor: pointer; line-height: normal; overflow: hidden;
             text-overflow: ellipsis; white-space: nowrap; }
       li:hover { background-color: #ffebcd; }
-      li span { display: inline-block; margin: 0 0.4em 0 1em; color: transparent; }
+      li span { display: inline-block;  width: 1.5em; color: transparent; }
       li.on span { color: inherit; }
-      li:nth-last-child(2) { color: orange; }
-      li:nth-last-child(2) span, li:last-of-type span { margin-left: 0; }
       li:last-of-type { color: red; }
-      .button { margin-bottom: 0; padding: 0.5em 1em; }
+    button:first-of-type { margin-left: 0; }
     </style>
-  </head>    
+  </head>
   <body>
 
     <!-- header -->
@@ -36,12 +33,14 @@
 
     <!-- main -->
     <div id="optionsRow" class="prime hide" style="margin: 0;">
-        <h4 data-i18n="modeSelection"></h4>
-        <ul>
+
+        <!-- <h4 data-i18n="modeSelection"></h4> -->
+        <ul class="scroll">
+          <li id="patterns" data-i18n="modePatterns" class="fp-orange"><span class="fa fa-check"></span></li>
+          
           <!-- template -->
           <li class="template"><span class="fa fa-check"></span></li>
-
-          <li id="patterns" data-i18n="modePatterns" style="margin-top: 0.5em !important;"><span class="fa fa-check"></span></li>
+          
           <li id="disabled" data-i18n="modeDisabled"><span class="fa fa-check"></span></li>
         </ul>
         <div style="margin-top: 1em; text-align: center;">
@@ -52,7 +51,6 @@
     </div>
 
   <script src="scripts/const.js"></script>
-  <script src="scripts/storage.js"></script>
   <script src="scripts/utils.js"></script>
   <script src="scripts/popup.js"></script>
   </body>
