--- a/src/log.html
+++ b/src/log.html
@@ -7,10 +7,9 @@
     <link rel="stylesheet" href="styles/fontawesome-4.6.3.css">
     <link rel="stylesheet" href="styles/app.css">
     <style>
-      tbody tr:nth-child(even) { background-color: #f5fffa  !important; }
-      tbody tr:hover { background-color: #cae1d3 !important; }
+
       tbody tr:hover a { color: #a0522d; }
-      tbody td { overflow-x: auto; text-overflow: ellipsis; white-space: nowrap; scrollbar-color: #ddd #f5f5f5; scrollbar-width: thin; }
+      tbody td { padding: 0em 0.2em; overflow-x: auto; text-overflow: ellipsis; white-space: nowrap; scrollbar-color: #ddd #f5f5f5; scrollbar-width: thin; }
       td:nth-child(1) { max-width: 20em; }      
       td:nth-child(2) { max-width: 5em; }
       td:nth-child(3) { width: 2em; border-radius: 5px; border: 2px solid #fff; }
