--- a/src/patterns.html
+++ b/src/patterns.html
@@ -10,13 +10,8 @@
     <link rel="stylesheet" href="styles/vex-theme-default-4.1.0.css"/>
     <style>
       a i.fa { font-size: 1.5em; margin-left: 0.2em; }
-      tbody tr:nth-child(even) { background-color: #f5fffa  !important; }
-      tbody tr:hover { background-color: #cae1d3 !important; }
-      tbody td { padding: 0.2em; }
-      tbody td:nth-of-type(1), tbody td:nth-of-type(2) { max-width: 15em; overflow: hidden;
-        text-overflow: ellipsis; white-space: nowrap; }
+      tbody td:nth-of-type(1), tbody td:nth-of-type(2) { min-width: 10em; max-width: 15em; }
       tbody td:nth-of-type(1)::before, tbody td:nth-of-type(2)::before { content: attr(title); }
-      th:nth-of-type(1), th:nth-of-type(2) { min-width: 10em; }
       th:nth-of-type(3), th:nth-of-type(4), th:nth-of-type(5) { width: 5em; }
       th:nth-of-type(6) { width: 7em; }
       td:nth-of-type(3), td:nth-of-type(4), td:nth-of-type(5) { text-align: center; }
@@ -54,7 +49,11 @@
              </tr>
             <!-- template -->
             <tr class="template">
-               <td></td><td></td><td></td><td></td><td></td>
+               <td class="ellipsis"></td>
+               <td class="ellipsis"></td>
+               <td></td>
+               <td></td>
+               <td></td>
                <td style="text-align: right;">
                 <a class="hide1" data-i18n="imported|title"><i class="fa fa-download"></i></a>
                 <a data-i18n="edit|title" ><i class="fa fa-pencil"></i></a>
