--- a/src/about.html
+++ b/src/about.html
@@ -15,6 +15,7 @@
         text-align: center;
         width: 1em;
       }
+      i.fa.fa-lock { color: #080; }
     </style>
   </head>
   <body>
@@ -57,10 +58,16 @@
 
       <h4>Versions 7.0</h4>
         <ul>
+          <li>Option to set active on|off on proxy Edit page</li>
+          <li>username/password are kept when adding new proxies for rapid creation of multiple proxies with same username/password</li>
+          <li>Log shows local date & time in local (browser) language</li>
+          <li>Log is not cleared when switching it off until ti is manually cleared</li>
           <li>Option to transfer preferences from <i>local</i> to <i>Sync</i> and vice versa</li>
+          <li>Options page shows <i class="fa fa-lock"></i>for proxies with username/password</li>
           <li>Date is added to the export filename</li>
           <li>Export auto-renames file if the same name exists</li>
           <li>Import data max size set to 5mb</li>
+          <li>Mouseove on ellipsised text on patterns shows the full text</li>
           <li>Greatly streamlined</li>
           <li>Style/Code Improvement</li>
         </ul>      
