--- a/src/options.html
+++ b/src/options.html
@@ -29,6 +29,8 @@
       #accounts button.small { margin-left: 0.2em; }
       .default :not([data-i18n="edit"]) { visibility: hidden; }
       #accounts button i.fa { font-size: 1.8em; }
+      .fa-lock { display: inline-block; color: #080; font-size: 1.3em; vertical-align: middle; margin-right: 0.3em; }
+      .fa-lock.hide { visibility: hidden; } 
     </style>
 
   </head>
@@ -92,6 +94,7 @@
               <span class="address ellipsis"></span>
             </div>
             <div style="text-align: right;">
+              <i class="fa fa-lock hide"></i>
               <input type="checkbox" name="onOff" class="switch-input" id="">
               <label class="switch-paddle" for="">
                 <span class="switch-active" aria-hidden="true" style="color: white" data-i18n="on"></span>
