--- a/src/about.html
+++ b/src/about.html
@@ -62,6 +62,7 @@
           <li>username/password are kept when adding new proxies for rapid creation of multiple proxies with same username/password</li>
           <li>Log shows local date & time in local (browser) language</li>
           <li>Log is not cleared when switching it off until ti is manually cleared</li>
+          <li>Log entries are numbered</li>
           <li>Option to transfer preferences from <i>local</i> to <i>Sync</i> and vice versa</li>
           <li>Options page shows <i class="fa fa-lock"></i>for proxies with username/password</li>
           <li>Date is added to the export filename</li>
