--- a/src/log.html
+++ b/src/log.html
@@ -10,7 +10,7 @@
 
       tbody tr:hover a { color: #a0522d; }
       tbody td { padding: 0em 0.2em; overflow-x: auto; text-overflow: ellipsis; white-space: nowrap; scrollbar-color: #ddd #f5f5f5; scrollbar-width: thin; }
-      td:nth-child(1) { max-width: 20em; }      
+      td:nth-child(1) { max-width: 20em; }
       td:nth-child(2) { max-width: 5em; }
       td:nth-child(3) { width: 2em; border-radius: 5px; border: 2px solid #fff; }
       td:nth-child(4) { max-width: 8em; }
@@ -18,16 +18,30 @@
       td:nth-child(6) { max-width: 14em; }
       .scroll { max-height: 60vh; }
       .prime.warning { border: 1px solid #ccc;  font-size: 0.9em; padding: 0.5em;}
+
+      tbody { counter-reset: n; }
+      tbody tr td:first-child::before {
+         display: inline-block;
+         color: #aaa;
+         min-width: 1.5em;
+         text-align: right;
+         vertical-align: middle;
+         margin-right: 0.4em;
+         pointer-events: none;
+         counter-increment: n;
+         content: counter(n);
+         font-size: 0.7em;
+      }
     </style>
   </head>
   <body>
 
     <!-- header -->
     <div class="prime header" data-i18n="log"></div>
-    
+
 
     <!-- spinner --> <!-- options, patterns, log -->
-    <div id="spinner" class="on"><span class="fa fa-refresh fa-spin fp-orange"></span></div>
+    <div id="spinner" class="on"><i class="fa fa-refresh fa-spin"></i></div>
 
 
     <!-- main -->
@@ -37,8 +51,8 @@
       <input name="onOff" class="switch-input" id="onOff" type="checkbox" checked>
       <label class="switch-paddle" for="onOff">
         <span class="show-for-sr">On/Off</span>
-        <span class="switch-active bold" aria-hidden="true" style="color: white">On</span>
-        <span class="switch-inactive bold fp-orange" aria-hidden="true">Off</span>
+        <span class="switch-active" aria-hidden="true" data-i18n="on"></span>
+        <span class="switch-inactive" aria-hidden="true" data-i18n="off"></span>
       </label>
 
       <div class="prime warning"><strong>Failed URLs display here, too!</strong><br>
@@ -63,16 +77,14 @@
             </tr>
           </thead>
 
-
-
           <tbody></tbody>
         </table>
       </div>
 
       <div style="margin-top: 1em; text-align: right;">
         <button type="button" data-i18n="back">&#x25c1; </button>
-        <button type="button" data-i18n="refresh"></button>
-        <button type="button" class="alert" data-i18n="clear"></button>
+        <button type="button" data-i18n="refresh"><i class="fa fa-refresh"></i> </button>
+        <button type="button" class="alert" data-i18n="clear"><i class="fa fa-trash" style="color: inherit;"></i> </button>
       </div>
 
     </div>
