--- a/src/patterns.html
+++ b/src/patterns.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="styles/vex-4.1.0.css"/>
     <link rel="stylesheet" href="styles/vex-theme-default-4.1.0.css"/>
     <style>
-      a i.fa { font-size: 1.5em; margin-left: 0.2em; }
+      i.fa { font-size: 1.5em; margin-left: 0.2em; }
       tr { opacity: 1; transition: all 0.5s ease-in-out; }
       tbody td:nth-of-type(1), tbody td:nth-of-type(2) { min-width: 10em; max-width: 15em; }
       tbody td:nth-of-type(1)::before, tbody td:nth-of-type(2)::before { content: attr(title); }
@@ -47,19 +47,19 @@
             <tr>
               <th data-i18n="name"></th><th data-i18n="pattern"></th><th data-i18n="type"></th>
               <th>HTTP/s</th><th data-i18n="onOff"></th><th data-i18n="edit"></th>
-             </tr>
+            </tr>
             <!-- template -->
             <tr class="template">
-               <td class="ellipsis"></td>
-               <td class="ellipsis"></td>
-               <td></td>
-               <td></td>
-               <td></td>
-               <td style="text-align: right;">
-                <a class="hide" data-i18n="imported|title"><i class="fa fa-download"></i></a>
-                <a data-i18n="edit|title" ><i class="fa fa-pencil"></i></a>
-                <a data-i18n="delete|title" ><i class="fa fa-trash"></i></a>
-               </td>
+              <td class="ellipsis"></td>
+              <td class="ellipsis"></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td style="text-align: right;">
+                <button type="button" class="plain hide" data-i18n="imported|title"><i class="fa fa-download"></i></button>
+                <button type="button" class="plain" data-i18n="edit|title"><i class="fa fa-pencil"></i></button>
+                <button type="button" class="plain" data-i18n="delete|title"><i class="fa fa-trash"></i></button>
+              </td>
             </tr>
           </thead>
 
