--- a/src/about.html
+++ b/src/about.html
@@ -40,11 +40,11 @@
 
       <h3>Help</h3>
       <p>
-        <i class="fa fa-question"></i> <a href="https://support.getfoxyproxy.org/" target="_blank">Open a Support Ticket </a><i>(no registration required)</i><br>
-        <i class="fa fa-envelope-o"></i> <a href="mailto:support@getfoxyproxy.org">Email Support</a><br>
-        <i class="fa fa-users"></i> <a href="https://forums.getfoxyproxy.org/" target="_blank">Community Support Forums</a><br>
-        <i class="fa fa-flask"></i> <a href="/pattern-tester.html">Pattern Test</a> &amp; <a href="/pattern-help.html">Pattern Help</a> <i>(no internet connection required)</i><br>
-        <i class="fa fa-globe"></i> <a href="https://getfoxyproxy.org/geoip/" target="_blank">What's my IP Address?</a>
+        <i class="fa fa-question"></i><a href="https://support.getfoxyproxy.org/" target="_blank">Open a Support Ticket </a><i>(no registration required)</i><br>
+        <i class="fa fa-envelope-o"></i><a href="mailto:support@getfoxyproxy.org">Email Support</a><br>
+        <i class="fa fa-users"></i><a href="https://forums.getfoxyproxy.org/" target="_blank">Community Support Forums</a><br>
+        <i class="fa fa-flask"></i><a href="/pattern-tester.html">Pattern Test</a> &amp; <a href="/pattern-help.html">Pattern Help</a> <i class="fa fa-question-circle"></i><i>(no internet connection required)</i><br>
+        <i class="fa fa-globe"></i><a href="https://getfoxyproxy.org/geoip/" target="_blank">What's my IP Address?</a>
       </p>
 
       <h3>Support Me</h3>
@@ -63,6 +63,7 @@
           <li>Log shows local date & time in local (browser) language</li>
           <li>Log is not cleared when switching it off until ti is manually cleared</li>
           <li>Log entries are numbered</li>
+          <li>Added size control to Log entries</li>
           <li>Option to transfer preferences from <i>local</i> to <i>Sync</i> and vice versa</li>
           <li>Options page shows <i class="fa fa-lock"></i>for proxies with username/password</li>
           <li>Date is added to the export filename</li>
