--- a/src/pattern-tester.html
+++ b/src/pattern-tester.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title data-i18n="patternTester">FoxyProxy </title>
     <link rel="icon" type="image/png" href="/images/icon.svg">
+    <link rel="stylesheet" href="styles/fontawesome-4.6.3.css">
     <link rel="stylesheet" href="styles/app.css">
     <style>
       h3 { margin-bottom: 0; }
@@ -22,7 +23,7 @@
     <div class="prime">
 
       <div style="text-align: right;">
-        <a href="/pattern-help.html" target="_blank">Pattern Help</a>
+        <a href="/pattern-help.html" target="_blank">Pattern Help <i class="fa fa-question-circle"></i></a>
       </div>
 
       <h3>Step 1</h3>
