--- a/src/patterns.html
+++ b/src/patterns.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="styles/vex-4.1.0.css"/>
     <link rel="stylesheet" href="styles/vex-theme-default-4.1.0.css"/>
     <style>
-      i.fa { font-size: 1.5em; margin-left: 0.2em; }
+      i.fa { font-size: 1.5em; }
+      i.fa.fa-question-circle, i.fa.fa-flask { font-size: 1em; }
       tr { opacity: 1; transition: all 0.5s ease-in-out; }
       tbody td:nth-of-type(1), tbody td:nth-of-type(2) { min-width: 10em; max-width: 15em; }
       tbody td:nth-of-type(1)::before, tbody td:nth-of-type(2)::before { content: attr(title); }
@@ -35,8 +36,8 @@
     <!-- main -->
     <div class="prime main">
       <div style="text-align: right;">
-        <a href="/pattern-help.html" target="_blank">Pattern Help</a> |
-        <a href="/pattern-tester.html" target="_blank">Pattern Tester</a>
+        <a href="/pattern-help.html" target="_blank">Pattern Help <i class="fa fa-question-circle"></i></a> |
+        <a href="/pattern-tester.html" target="_blank">Pattern Tester <i class="fa fa-flask"></i></a>
       </div>
 
       <h3 data-i18n="whitePatterns"></h3>
