--- a/src/log.html
+++ b/src/log.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="styles/fontawesome-4.6.3.css">
     <link rel="stylesheet" href="styles/app.css">
     <style>
-
       tbody tr:hover a { color: #a0522d; }
       tbody td { padding: 0em 0.2em; overflow-x: auto; text-overflow: ellipsis; white-space: nowrap; scrollbar-color: #ddd #f5f5f5; scrollbar-width: thin; }
       td:nth-child(1) { max-width: 20em; }
@@ -16,9 +15,7 @@
       td:nth-child(4) { max-width: 8em; }
       td:nth-child(5) { max-width: 8em; }
       td:nth-child(6) { max-width: 14em; }
-      .scroll { max-height: 60vh; }
       .prime.warning { border: 1px solid #ccc;  font-size: 0.9em; padding: 0.5em;}
-
       tbody { counter-reset: n; }
       tbody tr td:first-child::before {
          display: inline-block;
@@ -31,6 +28,19 @@
          counter-increment: n;
          content: counter(n);
          font-size: 0.7em;
+      }
+      
+      label {
+        display: inline-block; 
+        margin: 0 0.5em 0 1em; 
+        font-size: 1em;      
+      }
+      
+      input[type="text"] {
+        display: inline-block;
+        width: 5em;
+        padding: 0.2em;
+        height: auto;
       }
     </style>
   </head>
@@ -47,13 +57,20 @@
     <!-- main -->
     <div class="prime">
 
-      <h3 style="display: inline-block; margin-right: 0.5em;" data-i18n="log"></h3>
-      <input name="onOff" class="switch-input" id="onOff" type="checkbox" checked>
-      <label class="switch-paddle" for="onOff">
-        <span class="show-for-sr">On/Off</span>
-        <span class="switch-active" aria-hidden="true" data-i18n="on"></span>
-        <span class="switch-inactive" aria-hidden="true" data-i18n="off"></span>
-      </label>
+        <div style="text-align: right;">
+          <!-- <h3 style="display: inline-block; margin: 0 0.5em 0 0;" data-i18n="log"></h3> -->
+          <label style="display: inline-block; margin-right: 0.5em;" data-i18n="log"></label>
+          <input name="onOff" class="switch-input" id="onOff" type="checkbox" checked>
+          <label class="switch-paddle" for="onOff">
+            <span class="show-for-sr">On/Off</span>
+            <span class="switch-active" aria-hidden="true" data-i18n="on"></span>
+            <span class="switch-inactive" aria-hidden="true" data-i18n="off"></span>
+          </label>
+   
+          <label style="display: inline-block; margin-right: 0.5em;" data-i18n="logSize"></label>
+          <input id="logSize" type="text">
+ 
+      </div>      
 
       <div class="prime warning"><strong>Failed URLs display here, too!</strong><br>
         A row in this log does not mean the URL successfully loaded. The log shows only how <strong>attempts</strong> were made to load URLs. If the proxy server was not responding or there was some other problem which prevented the URL from loading, the URL still displays here. This is a limitation of Firefox 57+.
